cmake_minimum_required(VERSION 3.17)
project(leetcode_train)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_train  "Array/287. Find the Duplicate Number.cpp" "Tree/449. Serialize and Deserialize BST.cpp" "DFS_BFS/79. Word Search.cpp" "String/139. Word Break.cpp" "Tree/111. Minimum Depth of Binary Tree.cpp" "Tree/100. Same Tree.cpp" "简单其他题/155. Min Stack.cpp" "Tree/145. Binary Tree Postorder Traversal.cpp" "Tree/144. Binary Tree Preorder Traversal.cpp" "简单其他题/118. Pascal's Triangle.cpp" "简单其他题/119. Pascal's Triangle II.cpp" "Tree/112. Path Sum.cpp" "dp/746. Min Cost Climbing Stairs.cpp" "dp/剑指 Offer II 003. 前 n 个数字二进制中 1 的个数.cpp" "dp/剑指 Offer II 088. 爬楼梯的最少成本.cpp" "dp/剑指 Offer 10- II. 青蛙跳台阶问题.cpp" "dp/1646. Get Maximum in Generated Array.cpp" "dp/面试题 08.01. 三步问题.cpp" "dp/面试题 16.17. 连续数列.cpp" "dp/面试题 17.16. 按摩师.cpp")



