cmake_minimum_required(VERSION 3.17)
project(leetcode_train)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_train main.cpp "数组/566. Reshape the Matrix.cpp" "数组/485. Max Consecutive Ones.cpp" "数组/240. Search a 2D Matrix II.cpp" "数组/645. Set Mismatch.cpp" "数组/667. Beautiful Arrangement II.cpp" "数组/766. Toeplitz Matrix.cpp")



